<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/matches"
        android:enabled="true"
        android:icon="@drawable/ic_trophy"
        android:title="@string/matches"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/teams"
        android:enabled="true"
        android:icon="@drawable/ic_soccer"
        android:title="@string/teams"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
</menu>